# growth_stock_identifier

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/data/: cache.py  datasets.py  feature_pipeline.py  fetch.py  make_dataset.py  utils_timeseries.py
src/data/providers/: alpaca.py  alpha_vantage.py  base.py  stooq.py  yf.py
src/jobs/: build_panel_monthly.py  delta_ingest.py  feature_update.py  label_maturer.py
src/scripts/: build_features.py  fetch_bars.py
tests/: test_smoke_data.py
